# bookmanage-system

./: .gitignore  CMakeLists.txt  README.md  book_database  book_libary.db  client.cpp  client_socket.cpp  demo  demo.cpp  g.bat  g.sh  server  test  test.cpp  user_database  user_libary.db
client/: FormatTime.cpp  FormatTime.h  cell_booklending.cpp  cell_booklending.h  cell_booklending.ui  cell_bookmgr.cpp  cell_bookmgr.h  cell_bookmgr.ui  cell_record.cpp  cell_record.h  cell_record.ui  cell_search_book.cpp  cell_search_book.h  cell_search_book.ui  cell_searchbook.cpp  cell_searchbook.h  cell_searchbook.ui  cell_usermgr.cpp  cell_usermgr.h  cell_usermgr.ui  client  client.cpp  client.h  client.hpp  dlg_login.cpp  dlg_login.h  dlg_login.ui  foo.cpp  foo.h  library_last.pro  library_last.pro.user.2d0d529.22  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow1.cpp  mainwindow1.h  mainwindow1.ui  mainwindow2.ui  message.hpp
database/: sqlite_api.cpp  sqlite_api.h
include/: book_database.h  book_libary.h  book_library.h  book_manage.h  book_table.h  client.h  client_socket.h  database.h  database_base.hpp  manage.h  manager.h  message.h  server.h  server_socket.h  task_handle.hpp  user.h  user_database.h  user_libary.h  user_library.h  user_manage.h  user_table.h
log/: log.txt
ref/: log.hpp
server/: CMakeLists.txt  book_database  demo.cpp  main.cpp  server  server.cpp  server.h  user_database
sqlite/: a  main.cpp  sqlite  sqlite.cpp  sqlite.h  sqlite_api.cpp  sqlite_api.h  test.cpp  test.db
src/: a.out  book_database.cpp  book_libary.cpp  client.cpp  (+17 more)
(+12 files in other folders)
